--- a/first-mini-project/intro.css
+++ b/first-mini-project/intro.css
@@ -82,9 +82,10 @@ body{
     transform: scale(1.2);
 }
 
-@media screen and (max-width : 960px) {
+@media screen and (max-width : 750px) {
     .container{
         flex-direction: column;
+        overflow: ;
     }
     .brand-logo{
         width: 100vw;
