--- a/first-mini-project/content.css
+++ b/first-mini-project/content.css
@@ -38,8 +38,10 @@
     display: inline-block;
     font-size: 1.25em;
     text-decoration: none;
-    padding: 0px 25px;
+    /* padding: 0px 25px; */
+    text-align: center;
     font-weight: 600;
+    width: 110px;
 }
 .nav-bar a:link, a:visited {
     color : white;
@@ -64,6 +66,7 @@
     position: absolute;
     color: white;
     background-color: black;
+    z-index: 1;
     width: 100%;
     box-shadow: -5px 5px 20px #159de7;
 }
@@ -85,6 +88,10 @@
 .menu-cont:hover .drop{
     display: block;
 }
+
+        /* MEDIA QUERY FOR HEADER */
+
+
 @media screen and (max-width : 1300px) {
     .nav-bar{
         margin-right: 1vw;
@@ -95,19 +102,54 @@
         margin-right: 1.5vw;
     }
     .nav-bar a{
-        padding: 0px 15px;
+        width: 90px;
     }
 }
+
 @media screen and (max-width : 880px) {
-    .nav-bar a{
-        padding: 0px 10px;
-    }
-}
-@media screen and (max-width : 780px) {
     .menu-cont{
         display: block;
     }
     .nav-bar{
         display: none;
     }
+    .search{
+        width: 40vw;
+    }
+}
+@media screen and (max-width : 610px) {
+    .container-nav{
+        height: 80px;
+    }
+    .search{
+        width: 50vw;
+    }
+}
+@media screen and (max-width: 440px) {
+    .menu-cont{
+        width: 25vw;
+    }
+}
+
+             /* END OF HEADER MEDIA */
+   
+             /* MAIN CONTENT */
+.carousel-work{
+    max-width: 800px;
+    margin: 30px auto;
+    box-shadow: 0px 0px 30px rgb(40, 40, 40);
+}
+
+.line{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    /* height: 300px; */
+    justify-content: space-around;
+}
+.ele{
+    height: 300px;
+    min-width: 300px;
+    border: 5px solid black;
+    margin: 30px 20px;
 }
