--- a/first-mini-project/content.css
+++ b/first-mini-project/content.css
@@ -140,16 +140,30 @@
     box-shadow: 0px 0px 30px rgb(40, 40, 40);
 }
 
+
 .line{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100vw;
-    /* height: 300px; */
-    justify-content: space-around;
+    justify-content:space-around;
 }
 .ele{
-    height: 300px;
-    min-width: 300px;
-    border: 5px solid black;
-    margin: 30px 20px;
+    box-shadow: 0px 0px 20px rgb(40, 40, 40);
+    width: 268px;
+    margin: 40px;
+    text-align: center;
+    padding: 0px;
+}
+.card{
+    height: 400px;
+}
+.check{
+
+}
+@media screen and (max-width:1200px) {
+    .ele{
+        margin: 20px ;
+    }
+}
+@media screen and (max-width: 780px) {
+    .ele{
+        margin: 20px 0px;
+    }
 }
