Sorted peoblem of nav menu

--- a/first-mini-project/intro.css
+++ b/first-mini-project/intro.css
@@ -85,7 +85,7 @@ body{
 @media screen and (max-width : 750px) {
     .container{
         flex-direction: column;
-        overflow: ;
+        /* overflow: ; */
     }
     .brand-logo{
         width: 100vw;
