--- a/first-mini-project/content.css
+++ b/first-mini-project/content.css
@@ -36,6 +36,7 @@
 }
 .nav-bar a {
     display: inline-block;
+    position: relative;
     font-size: 1.25em;
     text-decoration: none;
     /* padding: 0px 25px; */
@@ -61,12 +62,13 @@
     position:relative;
     text-align: center;
 }
+
 .drop{
     display: none;
     position: absolute;
     color: white;
     background-color: black;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     box-shadow: -5px 5px 20px #159de7;
 }
@@ -154,7 +156,12 @@
 .card{
     height: 400px;
 }
-.check{
+.name{
+    display: block;
+    text-align: center;
+    font-size: 1.8em;
+    font-weight: 600;
+    text-shadow: 2px 2px 5px rgb(40, 40, 40);
 
 }
 @media screen and (max-width:1200px) {
