--- a/first-mini-project/content.css
+++ b/first-mini-project/content.css
@@ -174,3 +174,59 @@
         margin: 20px 0px;
     }
 }
+
+
+        /* footer */
+footer{
+    /* width: 100%; */
+    display: flex;
+    /* height: 100px; */
+    background-color: black;
+    bottom: 0px;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+}
+.footer-logo{
+    height: inherit;
+    display: flex;
+    color: white;
+}
+.footer-logo img{
+    height: 100px;
+}
+.footer-logo div{
+    display: inline;
+    align-self: center;
+}
+.support{
+    color: white;
+    text-align: center;
+}
+.support a{
+    text-decoration: none;
+}
+.social-media img{
+    height: 30px;
+}
+.social-media a {
+        text-decoration: none;
+        display: inline-block;
+        margin: 5px;
+}
+.social-media a:link, a:visited{
+    background-color: black;
+}
+.social-media a:hover, a:active{
+    transform: scale(1.25);
+}
+
+@media screen and (max-width: 850px) {
+    footer{
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .footer-logo img{
+        height: 70px;
+    }
+}
