--- a/first-mini-project/content.css
+++ b/first-mini-project/content.css
@@ -33,6 +33,7 @@
 .nav-bar{
     line-height: 100px;
     margin-right: 5vw;
+    display: flex;
 }
 .nav-bar a {
     display: inline-block;
@@ -50,6 +51,14 @@
 .nav-bar a:hover, a:active {
     color: black;
     background-color: white;
+}
+.cont-table{
+    width: inherit;
+}
+.cont-table{
+    /* display: inline-block; */
+    position: relative;
+    
 }
 .menu{
     font-size: 40px;   
@@ -152,9 +161,11 @@
     margin: 40px;
     text-align: center;
     padding: 0px;
+    position: relative;
 }
 .card{
     height: 400px;
+    display: block;
 }
 .name{
     display: block;
@@ -164,11 +175,62 @@
     text-shadow: 2px 2px 5px rgb(40, 40, 40);
 
 }
+ .fa-heart {
+    color: rgb(255, 51, 0);
+    transition: 0.6s;
+}
+.fas-b {
+    color: rgb(13, 79, 221);
+}
+span{
+    font-size: 20px;
+    background-color: rgba(40, 40, 40, 0.5);
+}
+.heart{
+    display: block;
+    /* color: white; */
+    position:absolute;
+    right: -50px;
+    height: 50%;
+    /* width: 100%; */
+    bottom: 0px;
+    
+}
+
+
+.card-data{
+    font-size: 20px;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    color: white;
+    background-color: rgba(40, 40, 40, 0.4);
+    line-height: 100px;
+    /* opacity: 0; */
+    transition: 0.5s;
+}
+span{
+    /* display: inline-block; */
+    opacity: 0;
+    /* transition-delay: 0s; */
+    display: none;
+}
+
+.ele:hover .fas {
+    transform: translateX(-60px);
+}
+.ele:hover span{
+    opacity: 1;
+    transition-delay: 0.3s;
+}
 @media screen and (max-width:1200px) {
     .ele{
         margin: 20px ;
     }
 }
+
 @media screen and (max-width: 780px) {
     .ele{
         margin: 20px 0px;
